# salary_calculator_project

./: README.md  pyproject.toml
src/salary_reporter/: cli.py  config.py  custom_types.py  data_loader.py  domain_models.py  exceptions.py  main.py
src/salary_reporter/reporting/: base.py  payout_report.py  registry.py
tests/: conftest.py  test_cli.py  test_data_loader.py
tests/data/: employees_empty.csv  employees_malformed_data.csv  employees_no_rate_col.csv  employees_rate_col.csv  employees_salary_col.csv
tests/test_reporting/: test_payout_report.py  test_registry.py
